# ai-agency-platform

./: .cipher.env  .cursorignore  .env.example  .eslintrc.js  .gitignore  .gitleaks.toml  .opencode.env  Makefile  justfile  lefthook.yml  package-lock.json  package.json  parameterize_hardcoded.sh  pixi.toml  tsconfig.json  turbo.json
configs/: .chezmoi.toml  .editorconfig  .env.polyglot  .eslintrc.cjs  .eslintrc.json  .gitignore  .gitleaks.toml  .installation_complete  .java-version  .lefthook.yml  .mise.toml  Cargo.toml  api-monitoring-config.json  api-test-config.json  celery_config.py  claude_install_fea_report.json  clean_20step_analysis.json  cli-registry.json  comprehensive_pixi.toml  debug_all_errors.js  docker-compose.network.yml  env-template.sh  env.example  event-router.json  fea_claude_integrated_optimization.json  fea_gap_analysis_debug.json  final_debugging_summary.json  finite_element_analysis_report.json  finite_element_gap_analysis_results.json  gibson-config.yaml  graphql-proxy-config.json  index.html  justfile  litellm-config.yaml  loose_files_audit_report.json  mcp-client-content-gen.json  mcp-client-customer-service.json  mcp-client-ecommerce.json  mcp-config.toml  mcp-server-registry.cjs  (+23 more)
configs/clients/: authenticated-client.js
configs/deepeval/: config.yaml
configs/environment/: .env.example
configs/git-hooks/: pre-commit
configs/linting/: .eslintrc.js
configs/llm/: ollama-config.json  prompt-pipelines.json
configs/mcp/: mcp-server-validation-fixed-report.json  mcp-server-validation-report.json  mcp.json  opencode-mcp-config.json
configs/pixi-backups/: pixi-complete-toolchain.toml
configs/promptfoo/: promptfooconfig.yaml
configs/root-configs/: .cursorrules  .eslintignore  .java-config
configs/security/: auth.json
configs/servers/: universal-mcp-server.js
(+1150 files in other folders)
