[project]
name = "ai-agency-platform"
version = "0.1.0"
description = "Universal AI Agency Platform"
requires-python = ">=3.11,<3.14"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests", "testing"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["scripts", "tools/python"]
branch = true
omit = [
    "*/__pycache__/*",
    "*/tests/*",
    "*/testing/*",
    "*/.venv/*",
    "*/venv311/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".venv",
    "venv311",
    ".pixi",
    "__pycache__",
    "*.pyc",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "C4",
]
ignore = [
    "E501",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    ".venv",
    "venv311",
    ".pixi",
]

[tool.black]
line-length = 88
target-version = ["py312"]
exclude = '''
/(
    \.venv
    | venv311
    | \.pixi
    | __pycache__
)/
'''
